--- a/Ch7Fragment/app/src/main/res/values/strings.xml
+++ b/Ch7Fragment/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="lb_title">제목</string>
     <string name="lb_content">제목에 대한 설명</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
