07/12 파프리카 하단메뉴바 추가&연결

--- a/AndroidStudioProjects/Paprika/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/Paprika/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Paprika</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ppSchedule">시간표</string>
+    <string name="ppCourse">강좌목록</string>
+    <string name="ppHome">홈</string>
 </resources>
